--- a/src/index.css
+++ b/src/index.css
@@ -5,6 +5,7 @@
   --footer-color: rgb(13, 13, 13);
   --text-color: rgb(255, 255, 255);
   --link-color: rgb(0, 123, 255);
+  --darkBG-gradient: linear-gradient(0deg, var(--background-color), hsl(0, 6%, 17%));
   
   --primary-font: 'Arial, Helvetica, sans-serif';
   --secondary-font: 'Georgia', serif;
@@ -13,7 +14,7 @@
   
 html{
   color: var(--text-color);
-  background-color: var(--background-color);
+  background: var(--darkBG-gradient)
 }
   
 *, 
