--- a/src/index.css
+++ b/src/index.css
@@ -5,7 +5,7 @@
   --footer-color: rgb(13, 13, 13);
   --text-color: rgb(255, 255, 255);
   --link-color: rgb(0, 123, 255);
-  --darkBG-gradient: linear-gradient(0deg, var(--background-color), hsl(0, 6%, 17%));
+  --darkBG-gradient: linear-gradient(to top, var(--background-color), hsl(0, 6%, 17%));
   
   --primary-font: 'Arial, Helvetica, sans-serif';
   --secondary-font: 'Georgia', serif;
@@ -14,7 +14,6 @@
   
 html{
   color: var(--text-color);
-  background: var(--darkBG-gradient)
 }
   
 *, 
@@ -27,7 +26,9 @@ html{
 
 html,
 body{
-  height: 100%;
+  background: var(--darkBG-gradient);
+  background-size: 100% 100%;
+  background-repeat: no-repeat;
 }
 
 ul{
