--- a/src/index.css
+++ b/src/index.css
@@ -1,17 +1,21 @@
 :root{
-  --primary-color: rgb(255, 166, 0);
-  --secondary-color: rgb(221, 125, 0);
-  --background-color: hsl(0, 4%, 10%);
   --footer-color: rgb(13, 13, 13);
   --text-color: rgb(255, 255, 255);
   --link-color: rgb(0, 123, 255);
-  --darkBG-gradient: linear-gradient(to top, var(--background-color), hsl(0, 6%, 17%));
-  
+  --background-color: linear-gradient(to top, hsl(0, 4%, 25%), hsl(0, 6%, 77%));
   --primary-font: 'Arial, Helvetica, sans-serif';
   --secondary-font: 'Georgia', serif;
   --base-font-size: 1rem;
+  --primary-color: hsl(0, 18%, 70%);
+  --border-color:hsl(31, 32%, 45%);
 }
-  
+
+[data-theme="dark"]{
+  --background-color: linear-gradient(to top, hsl(0, 4%, 10%), hsl(0, 6%, 17%));
+  --border-color: rgb(255, 166, 0);
+  --secondary-color: rgb(221, 125, 0);
+}
+
 html{
   color: var(--text-color);
 }
@@ -26,9 +30,9 @@ html{
 
 html,
 body{
-  background: var(--darkBG-gradient);
   background-size: 100% 100%;
   background-repeat: no-repeat;
+  position: relative;
 }
 
 ul{
@@ -46,8 +50,17 @@ a{
   margin: 0 auto;
   max-width: 100%;
   min-height: 100vh;
+  background: var(--background-color);
 }
 
 .logo{
   -webkit-tap-highlight-color: transparent;
+}
+
+.container-box{
+  display: flex;
+  flex-wrap: wrap;
+  flex-direction: column;
+  align-items: center;
+  justify-content: flex-start;
 }
