--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -23,7 +23,7 @@
     border: none;
     padding: 0;
     margin: 0;
-    background: var(--primary-color);
+    background: var(--borderSecond-color);
     font: inherit;
     color: inherit;
     outline: none;
