--- a/src/components/AuthPage/AuthorizationForm.css
+++ b/src/components/AuthPage/AuthorizationForm.css
@@ -10,8 +10,6 @@
 .container-login,
 .container-register,
 .container-forgotPassword{
-    position: relative;
-    z-index: 5;
     padding: 0 1rem;
 }
 
@@ -34,6 +32,7 @@
 .input-box i{
     position: absolute;
     margin-left: 90%;
+    top: 10px;
 }
 
 .input-box input{
@@ -106,4 +105,31 @@
 .container-register p,
 .container-forgotPassword p{
     text-align: center;
+}
+
+.container-register .input-box{
+    display: flex;
+    flex-direction: column;
+}
+
+p#uidnote.instructions,
+p#pwdnote.instructions,
+p#confirmnote.instructions{
+    text-align: justify;
+    padding: 0.3rem 0.5rem;
+}
+
+.instructions {
+    margin-top: 0.5rem;
+    font-size: 0.8rem;
+    border-radius: 0.3rem;
+    background: hsla(0, 0%, 0%, 0.24);
+    color: hsl(0, 0%, 100%);
+    padding: 0.25rem;
+    width: 100%;
+}
+
+.offscreen {
+    position: absolute;
+    left: -9999px;
 }
