--- a/src/components/AuthPage/AuthorizationForm.css
+++ b/src/components/AuthPage/AuthorizationForm.css
@@ -53,9 +53,8 @@
 }
 
 .input-box input:focus::placeholder {
-    transform: translateY(0);
-    color: #333;  
-    transition: color 0.2s ease;
+    opacity: 30%;
+    transition: opacity 0.2s ease;
   }
 
 .container-login .remember-forgot{
@@ -85,8 +84,6 @@
 .container-forgotPassword .btn{
     position: relative;
     width: 100%;
-    margin-left: 50%;
-    transform: translate(-50%);
     height: 2rem;
     border: none;
     outline: none;
@@ -94,7 +91,12 @@
     cursor: pointer;
     font-size: 1rem;
     font-weight: bold;
-    color: hsl(0, 2%, 22%);
+    color: hsl(0, 2%, 32%);
+}
+
+.container-register .btn:disabled{
+ color: hsla(0, 0%, 0%, 0.24);
+ cursor: unset;
 }
 
 .btn{
@@ -121,10 +123,10 @@ p#confirmnote.instructions{
 
 .instructions {
     margin-top: 0.5rem;
-    font-size: 0.8rem;
+    font-size: 0.9rem;
     border-radius: 0.3rem;
-    background: hsla(0, 0%, 0%, 0.24);
-    color: hsl(0, 0%, 100%);
+    background: var(--secondary-color);
+    color: var(--text-color);
     padding: 0.25rem;
     width: 100%;
 }
