--- a/src/components/DarkMode/DarkMode.module.css
+++ b/src/components/DarkMode/DarkMode.module.css
@@ -26,7 +26,7 @@
     top: 50%;
     transform: translateY(-50%);
     border-radius: 100%;
-    background: orange;
+    background: var(--primary-color);
     transition: 0.3s;
   }
   
