--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -1,37 +1,76 @@
-.stylesContainer {
+.container {
     display: flex;
     text-align: center;
     height: 45px;
     gap: 10px;
 }
 
-.inputStyles {
+.container input {
     height: 2rem;
     border-style: none;
     border-color: transparent;
     border-bottom: 2px solid var(--primary-color);
     background-color: transparent;
-    color: #FFF;
+    color: var(--text-color);
     outline: none;
     width: 100%;
-    font-size: 1.2rem;
+    font-size: 1rem;
+    padding-left: 0.5rem;
 }
-.inputStyles::placeholder{
-    color: #FFF;
+.container input::placeholder{
+    color: var(--primary-color);
 }
+
+.container input:focus::placeholder{
+    opacity: 30%;
+}
+
 .addBtnStyles {
     border: none;
-    padding: 0;
-    margin: 0;
-    background: var(--borderSecond-color);
-    font: inherit;
-    color: inherit;
-    outline: none;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    margin-left: auto;
+    background: var(--secondary-color);
+    color: var(--text-color);
+    font-size: 2rem;
+    font-weight: 600;
     cursor: pointer;
     height: 2rem;
     width: 4rem;
     border-radius: 0.3rem;
-    margin-left: auto;
-    font-size: 1.2rem;
     -webkit-tap-highlight-color: transparent;
+}
+
+.todoItem {
+    display: flex;
+    min-height: 30px;
+    align-items: center;
+    background: var(--secondary-color);
+    padding: 0.5rem 1rem;
+    border-radius: 0.3rem;
+    color: var(--text-color);
+    font-weight: 600;
+}
+
+.icoStyles {
+    display: flex;
+    gap: 10px;
+    margin-left: auto;
+    padding-left: 0.5rem;
+}
+
+.btnUnset  {
+    border: none;
+    padding: 0;
+    margin: 0;
+    background: transparent;
+    color: unset;
+    cursor:pointer;
+    font-Size: 1.2rem;
+}
+
+.fa-pen-to-square:hover,
+.fa-trash:hover{
+    color: aliceblue;
 }
