--- a/src/index.css
+++ b/src/index.css
@@ -1,26 +1,27 @@
 :root{
   --primary-font: 'Arial, Helvetica, sans-serif';
   --secondary-font: 'Georgia', serif;
-  --primary-color: hsl(0, 18%, 70%);
-  --secondary-color: hsl(31, 32%, 45%);
-  --third-color:hsl(28, 8%, 44%);
-  --base-font-size: 1rem;
+  --background-color: linear-gradient(to top, hsl(0, 4%, 25%), hsl(0, 6%, 77%));
   --text-color: rgb(255, 255, 255);
   --link-color: hsl(48, 56%, 82%);
-  --background-color: linear-gradient(to top, hsl(0, 4%, 25%), hsl(0, 6%, 77%));
+  --base-font-size: 1rem;
   --footer-color: transparent;
-  --border-color:hsl(31, 32%, 45%);
-  --borderSecond-color: hsl(31deg 18.67% 28.66%);
+  --main-color:hsl(28, 8%, 44%);
+  --borderMain-color: hsl(31deg 8.67% 48.66%);
+  --box-shadow: 0 0 4px hsla(240, 12.00%, 4.90%, 0.73);
+  --primary-color: hsl(31, 24%, 81%);
+  --secondary-color: hsl(28, 8%, 33%);
 }
 
 [data-theme="dark"]{
   --background-color: linear-gradient(to top, hsl(0, 4%, 10%), hsl(0, 6%, 17%));
-  --border-color: rgb(255, 166, 0);
-  --primary-color: rgb(255, 166, 0);
-  --secondary-color: rgb(221, 125, 0);
-  --third-color: hsl(240, 11%, 15%);
-  --borderSecond-color: hsl(240, 11%, 17%);
-  --footer-color: rgb(13, 13, 13);
+  --footer-color: hsl(0, 0%, 5%);
+  --main-color: hsl(240, 11%, 16%);
+  --borderMain-color: hsl(240, 11%, 17%);
+  --primary-color: hsl(39, 100%, 61%);
+  --secondary-color: hsl(34, 70%, 52%);
+
+  --text-color: rgb(53, 33, 33);
 }
 
 html{
