--- a/src/components/CircleDance/Circles.css
+++ b/src/components/CircleDance/Circles.css
@@ -18,11 +18,11 @@
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 15px solid hsl(0, 70%, 34%);
-    box-shadow: inset 0 0 30px rgb(255, 0, 0);
+    border: 20px solid var(--componentCircle-color);
+    box-shadow: inset 0 0 30px var(--componentCircle-color);
     background-color: transparent;
     border-radius: 100%;
-    animation: spin linear 8s infinite ;
+    animation:  spin 8s infinite ease-in-out;
 }
 
 .circles-container{
@@ -55,7 +55,7 @@
         transform: rotateX(0deg) rotateY(0);
     }
     50%{
-        transform: rotateX(360deg) rotateY(360deg) rotateZ(360deg);
+        transform: rotateX(360deg) rotateY(0) rotateZ(360deg);
     }
     100%{
         transform: rotateX(0) rotateY(0);
