--- a/src/components/Todo/Todo.css
+++ b/src/components/Todo/Todo.css
@@ -11,7 +11,7 @@
     border-color: transparent;
     border-bottom: 2px solid var(--primary-color);
     background-color: transparent;
-    color: var(--text-color);
+    color: var(--textSecondary-color);
     outline: none;
     width: 100%;
     font-size: 1rem;
