--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,7 @@
   --secondary-font: 'Georgia', serif;
   --background-color: linear-gradient(to top, hsl(0, 4%, 25%), hsl(0, 6%, 77%));
   --text-color: rgb(255, 255, 255);
+  --textSecondary-color:rgb(255, 255, 255);
   --link-color: hsl(48, 56%, 82%);
   --base-font-size: 1rem;
   --footer-color: transparent;
@@ -11,6 +12,7 @@
   --box-shadow: 0 0 4px hsla(240, 12.00%, 4.90%, 0.73);
   --primary-color: hsl(31, 24%, 81%);
   --secondary-color: hsl(28, 8%, 33%);
+  --componentCircle-color: hsl(0, 0%, 0%);
 }
 
 [data-theme="dark"]{
@@ -20,8 +22,9 @@
   --borderMain-color: hsl(240, 11%, 17%);
   --primary-color: hsl(39, 100%, 61%);
   --secondary-color: hsl(34, 70%, 52%);
-
   --text-color: rgb(53, 33, 33);
+  --textSecondary-color:rgb(255, 255, 255);
+  --componentCircle-color: hsl(0, 69%, 37%);
 }
 
 html{
@@ -41,6 +44,7 @@ body{
   background-size: 100% 100%;
   background-repeat: no-repeat;
   position: relative;
+  overflow-x: hidden;
 }
 
 ul{
