--- a/src/components/Header/Header.module.css
+++ b/src/components/Header/Header.module.css
@@ -41,7 +41,7 @@
 }
 
 .menuListItem:hover{
-    border: 2px solid var(--border-color);
+    border: 2px solid var(--headerItemBorder);
     border-radius: 8px;
 }
 
