--- a/src/index.css
+++ b/src/index.css
@@ -13,6 +13,7 @@
   --primary-color: hsl(31, 24%, 81%);
   --secondary-color: hsl(28, 8%, 33%);
   --componentCircle-color: hsl(0, 0%, 0%);
+  --headerItemBorder:hsl(31deg 8.67% 48.66%);
 }
 
 [data-theme="dark"]{
@@ -25,6 +26,7 @@
   --text-color: rgb(53, 33, 33);
   --textSecondary-color:rgb(255, 255, 255);
   --componentCircle-color: hsl(0, 69%, 37%);
+  --headerItemBorder:hsl(39, 100%, 61%);
 }
 
 html{
