--- a/src/components/CircleDance/Circles.css
+++ b/src/components/CircleDance/Circles.css
@@ -2,27 +2,25 @@
     --circle-diameter: 300px
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
 .circles-container,
 .circles-container .circle1,
 .circles-container .circle2,
 .circles-container .circle3,
-.circles-container .circle4{
+.circles-container .circle4,
+.circles-container .circle5,
+.circles-container .circle6,
+.circles-container .circle7,
+.circles-container .circle8{
     transform-style: preserve-3d;
-    perspective: 1000px;
+    perspective: 2000px;
     display: flex;
     justify-content: center;
     align-items: center;
-    border: 20px solid var(--componentCircle-color);
-    box-shadow: inset 0 0 30px var(--componentCircle-color);
+    border: 2px solid var(--componentCircle-color);
+    box-shadow: inset 0 0 50px var(--componentCircle-color);
     background-color: transparent;
     border-radius: 100%;
-    animation:  spin 8s infinite ease-in-out;
+    animation: spin 18s infinite ease-in-out;
 }
 
 .circles-container{
@@ -31,24 +29,45 @@
 }
 
 .circles-container .circle1{
+    width: calc(var(--circle-diameter) - 25px);
+    height: calc(var(--circle-diameter) - 25px);
+}
+
+.circles-container .circle2{
     width: calc(var(--circle-diameter) - 50px);
     height: calc(var(--circle-diameter) - 50px);
 }
 
-.circles-container .circle2{
+.circles-container .circle3{
+    width: calc(var(--circle-diameter) - 75px);
+    height: calc(var(--circle-diameter) - 75px);
+}
+
+.circles-container .circle4{
     width: calc(var(--circle-diameter) - 100px);
     height: calc(var(--circle-diameter) - 100px);
 }
 
-.circles-container .circle3{
+.circles-container .circle5{
+    width: calc(var(--circle-diameter) - 125px);
+    height: calc(var(--circle-diameter) - 125px);
+}
+
+.circles-container .circle6{
     width: calc(var(--circle-diameter) - 150px);
     height: calc(var(--circle-diameter) - 150px);
 }
 
-.circles-container .circle4{
+.circles-container .circle7{
+    width: calc(var(--circle-diameter) - 175px);
+    height: calc(var(--circle-diameter) - 175px);
+}
+
+.circles-container .circle8{
     width: calc(var(--circle-diameter) - 200px);
     height: calc(var(--circle-diameter) - 200px);
 }
+
 
 @keyframes spin {
     0%{
