--- a/src/components/DigitalClock/DigitalClock.css
+++ b/src/components/DigitalClock/DigitalClock.css
@@ -7,17 +7,23 @@
 
 .digital-clock-block ul{
   display: flex;
-  justify-content: space-around;
-  gap: 0.3rem;
-  font-size: 2rem;
+  justify-content: center;
 }
 
+.digital-clock-block .clock-hour{
+  font-size: 2rem;
+  gap: 0.3rem;
+}
 .digital-clock-block .clock-day{
-  font-size: 1.5rem;
+  display: flex;
+  justify-content: end;
+  font-size: 1.3rem;
 }
 
 .digital-clock-block .clock-string{
-  font-size: 1rem;
   display: flex;
-  gap: 1rem;
+  justify-content: end;
+  gap: 0.3rem;
+  font-size: 0.6rem;
+
 }
