--- a/src/components/DigitalClock/DigitalClock.css
+++ b/src/components/DigitalClock/DigitalClock.css
@@ -1,29 +1,25 @@
 .digital-clock-block{
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
   width: 100%;
   height: 100%;
   color: var(--primary-color);
   text-shadow: 0 0 2px var(--primary-color);
 }
 
-.digital-clock-block ul{
-  display: flex;
-  justify-content: center;
-}
-
 .digital-clock-block .clock-hour{
+  display: flex;
   font-size: 2rem;
   gap: 0.3rem;
 }
+
 .digital-clock-block .clock-day{
   display: flex;
-  justify-content: end;
-  font-size: 1.3rem;
+  font-size: 1rem;
 }
 
 .digital-clock-block .clock-string{
-  display: flex;
-  justify-content: end;
-  gap: 0.3rem;
-  font-size: 0.6rem;
-
+  font-size: 1.7rem;
 }
