--- a/src/components/DigitalClock/DigitalClock.css
+++ b/src/components/DigitalClock/DigitalClock.css
@@ -7,6 +7,7 @@
   height: 100%;
   color: var(--primary-color);
   text-shadow: 0 0 2px var(--primary-color);
+  line-height: 1;
 }
 
 .digital-clock-block .clock-hour{
