--- a/src/components/DarkMode/DarkMode.module.css
+++ b/src/components/DarkMode/DarkMode.module.css
@@ -1,8 +1,7 @@
 .darkmodeToggle{
     display: flex;
-    position: absolute;
-    top: 25px;
-    right: 280px;
+    align-items: center;
+    position: relative;
     margin-left: auto;
   }
   
