--- a/src/components/SVGNameAnimation/SVGNameAnimation.css
+++ b/src/components/SVGNameAnimation/SVGNameAnimation.css
@@ -3,33 +3,16 @@
     --full-delay: 1.5s;
 }
 
-*{
-    padding: 0;
-    margin: 0;
-    box-sizing: border-box;
-}
-
-.svg-container{
-    display: flex;
-    justify-content: center;
-    flex-shrink: 0;
-    margin-bottom: 2rem;
-    width: 100vw;
-    height: 100%; /* или конкретная высота, если нужно */
-}
-
 .svgName{
-    display: flex;
-    flex-shrink: 0;
-    width: 1092px;
-    height: 72.802px;
-    box-sizing: border-box;
     stroke: white;
     fill: transparent;
     shape-rendering:geometricPrecision;
     transform-origin: center;
     transform: scale(0.75);
     transition: transform 0.3s ease;
+    animation:
+        text-move-left 1s ease forwards calc(var(--full-delay) + 2.5s),
+        text-move-up 1s forwards calc(var(--full-delay) + 3.7s);
 }
 
 .svgName path:nth-child(1){
@@ -37,7 +20,8 @@
     stroke-dashoffset: 574;
     animation: 
         line-animation var(--line-speed) ease forwards, 
-        line-fill 0.3s ease forwards var(--full-delay);
+        line-fill 0.3s ease forwards var(--full-delay),
+        opacity-letter 1s ease forwards calc(var(--full-delay) + 2s);
 }
 
 .svgName path:nth-child(2){
@@ -45,7 +29,8 @@
     stroke-dashoffset: 376;
     animation: 
         line-animation var(--line-speed) ease forwards 0.3s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 0.3s);
+        line-fill 0.3s ease forwards calc(var(--full-delay) + 0.3s),
+        opacity-letter 1s ease forwards calc(var(--full-delay) + 2.1s);
 }
 
 .svgName path:nth-child(3){
@@ -53,7 +38,8 @@
     stroke-dashoffset: 229;
     animation: 
     line-animation var(--line-speed) ease forwards 0.6s, 
-    line-fill 0.3s ease forwards calc(var(--full-delay) + 0.6s);
+    line-fill 0.3s ease forwards calc(var(--full-delay) + 0.6s),
+    opacity-letter 1s ease forwards calc(var(--full-delay) + 2.2s);
 }
 
 .svgName path:nth-child(4){
@@ -100,6 +86,29 @@
     }
     to{
         fill: white;
+    }
+}
+
+@keyframes opacity-letter {
+    from{
+        opacity: 1;
+    }
+    to{
+        opacity: 0;
+        display: none;
+    }
+}
+
+@keyframes text-move-left {
+    to{
+        margin-left: -10%;
+    }
+}
+@keyframes text-move-up {
+    to{
+        margin-top: -20%;
+        opacity: 0;
+        display: none;
     }
 }
 
