--- a/src/components/DarkMode/DarkMode.module.css
+++ b/src/components/DarkMode/DarkMode.module.css
@@ -3,6 +3,7 @@
     align-items: center;
     position: relative;
     margin-left: auto;
+    padding-right: 0.5rem;
   }
   
   .darkmodeToggle label{
@@ -11,9 +12,10 @@
     width: 38px;
     height: 20px;
     border-radius: 1rem;
-    background: hsl(0, 18%, 30%);
+    background: var(--text-color);
     cursor: pointer;
     transition: 0.3s;
+
   }
   
   .darkmodeToggle label:after{
@@ -25,8 +27,9 @@
     top: 50%;
     transform: translateY(-50%);
     border-radius: 100%;
-    background: var(--primary-color);
+    background: var(--bg-container);
     transition: 0.3s;
+    box-shadow: var(--shadow-container);
   }
   
   .darkmodeToggle input{
@@ -34,17 +37,11 @@
   }
   
   .darkmodeToggle input:checked + label{
-    background: hsl(0, 18%, 70%);
+    background: var(--bg-container);
   }
   
   .darkmodeToggle input:checked + label:after{
     left: 20px;
-    background: hsl(31, 32%, 45%);
+    background: hsl(0, 0%, 100%);
     transition: 0.3s ease;
   }
-  
-@media (max-width: 480px) {
-    .darkmodeToggle{
-        right: 80px;
-    }
-}
