--- a/src/index.css
+++ b/src/index.css
@@ -51,7 +51,7 @@
     border: 2px solid transparent;
     color: var(--text-color);
     border-radius: 0.5rem;
-    background: var(--bg-container);
+    background: var(--bg-overlay);
   }
   .bg-gradient{
     background: var(--background-color);
@@ -96,13 +96,13 @@
   /* main page colors */
   --primary-font: "Roboto", serif;
   --secondary-font: 'Georgia', serif;
-  --background-color: linear-gradient(to top,hsl(210, 9%, 58%),hsl(210, 53%, 94%));
+  --background-color: #d6dee7;
   --text-color: #2a3c4f;
 
   /* app page colors */
-  --bg-container:hsla(213, 21%, 42%, 0.247);
-  --bg-modal: hsl(214, 12%, 62%);
-  --bg-overlay:hsla(240, 11%, 11%, 0.329);
+  --bg-container:hsla(212, 28%, 55%, 0.247);
+  --bg-modal: #bcc9d8;
+  --bg-overlay:hsla(214, 39%, 32%, 0.342);
   --shadow-container: 0 5px 8px hsla(214, 39%, 32%, 0.651);
   --text-shadow: 1px 2px 3px hsla(240, 46%, 19%, 0);
   --btn-downloadColor: hsl(133, 39%, 56%);
@@ -135,9 +135,9 @@
 
 [data-theme="dark"]{
     /* app page colors */
-    --bg-container:#4a5859;
-    --bg-modal: hsl(185, 8%, 32%);
-    --bg-overlay:hsla(240, 11%, 11%, 0.329);
+    --bg-container:hsla(184, 9%, 32%);
+    --bg-modal:hsla(194, 9%, 27%, 0.555);
+    --bg-overlay:hsla(180, 51%, 55%, 0.342);
     --shadow-container: 0 0 18px hsl(180, 51%, 55%);
     --text-shadow: 2px 2px 5px hsla(240, 10.10%, 11.40%, 0.5);
     --btn-downloadColor: hsl(185, 24%, 43%);
@@ -214,9 +214,6 @@ a{
 }
 
 @media (max-width:1150px) {
-  .viewport{
-    width: 95%;
-  }
   .component-container{
     gap: 0;
     flex-direction: column;
@@ -234,6 +231,7 @@ a{
   }
   .footer-btns{
     flex-direction: column;
+    align-items: center;
   }
   .contact-block,
   .about-block{
