--- a/src/components/Marketing/Marketing.css
+++ b/src/components/Marketing/Marketing.css
@@ -1,5 +1,5 @@
 .back-layout{
-  background-image: var(--background-color);
+  background: var(--background-color);
   width: 100%;
   height: 100dvh;
   position: fixed;
@@ -9,7 +9,6 @@
   align-items: center;
   overflow: hidden;
   font-family: Arial, Helvetica, sans-serif;
-
 }
 
 .text-items{
