--- a/src/index.css
+++ b/src/index.css
@@ -100,11 +100,11 @@
   --primary-font: "Roboto", serif;
   --secondary-font: 'Georgia', serif;
   --background-color: #d6dee7;
-  --text-color: #2a3c4f;
+  --text-color: hsl(211, 31%, 24%);
 
   /* app page colors */
-  --bg-container:hsla(212, 28%, 55%, 0.247);
-  --bg-modal: #bcc9d8;
+  --bg-container:#b5c3d4;
+  --bg-modal: #b5c3d4;
   --bg-overlay:hsla(214, 39%, 32%, 0.342);
   --shadow-container: 0 5px 8px hsla(214, 39%, 32%, 0.651);
   --text-shadow: 1px 2px 3px hsla(240, 46%, 19%, 0);
@@ -138,8 +138,8 @@
 
 [data-theme="dark"]{
     /* app page colors */
-    --bg-container:hsla(184, 9%, 32%);
-    --bg-modal:hsla(194, 9%, 27%, 0.555);
+    --bg-container:hsla(194, 9%, 33%);
+    --bg-modal:hsla(194, 9%, 33%);
     --bg-overlay:hsla(180, 51%, 55%, 0.342);
     --shadow-container: 0 0 18px hsl(180, 51%, 55%);
     --text-shadow: 2px 2px 5px hsla(240, 10.10%, 11.40%, 0.5);
