--- a/src/components/DicePost3.css
+++ b/src/components/DicePost3.css
@@ -7,15 +7,10 @@
   transition: transform 0.6s;
 }
 
-.card-front,
-.card-back{
-  backface-visibility: hidden;
-}
-
-.card-back{
-  transform: rotateY(180deg);
-}
-
 .img-container2:hover .card-inner{
   transform: rotateY(-180deg);
+}
+
+.mycard{
+  image-rendering: smooth; /* или image-rendering: smooth; */
 }
