--- a/src/components/SVGNameAnimation/SVGNameAnimation.css
+++ b/src/components/SVGNameAnimation/SVGNameAnimation.css
@@ -14,96 +14,14 @@
         text-move-left 1s ease forwards calc(var(--full-delay) + 2.5s),
         text-move-up 1s forwards calc(var(--full-delay) + 3.7s);
 }
-
-.svgName path:nth-child(1){
-    stroke-dasharray: 574;
-    stroke-dashoffset: 574;
-    animation: 
-        line-animation var(--line-speed) ease forwards, 
-        line-fill 0.3s ease forwards var(--full-delay),
-        opacity-letter 1s ease forwards calc(var(--full-delay) + 2s);
-}
-
-.svgName path:nth-child(2){
-    stroke-dasharray: 376;
-    stroke-dashoffset: 376;
-    animation: 
-        line-animation var(--line-speed) ease forwards 0.3s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 0.3s),
-        opacity-letter 1s ease forwards calc(var(--full-delay) + 2.1s);
-}
-
-.svgName path:nth-child(3){
-    stroke-dasharray: 229;
-    stroke-dashoffset: 229;
-    animation: 
-    line-animation var(--line-speed) ease forwards 0.6s, 
-    line-fill 0.3s ease forwards calc(var(--full-delay) + 0.6s),
-    opacity-letter 1s ease forwards calc(var(--full-delay) + 2.2s);
-}
-
-.svgName path:nth-child(4){
-    stroke-dasharray: 330;
-    stroke-dashoffset: 330;
-    animation: 
-        line-animation var(--line-speed) ease forwards 0.9s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 0.9s);
-}
-
-.svgName path:nth-child(5){
-    stroke-dasharray: 409;
-    stroke-dashoffset: 409;
-    animation: 
-        line-animation 4.5s ease forwards 1.2s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 1.2s);
-}
-
-.svgName path:nth-child(6){
-    stroke-dasharray: 542;
-    stroke-dashoffset: 542;
-    animation: 
-        line-animation var(--line-speed) ease forwards 1.5s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 1.5s);
-}
-
-.svgName path:nth-child(7){
-    stroke-dasharray: 376;
-    stroke-dashoffset: 376;
-    animation: 
-        line-animation var(--line-speed) ease forwards 1.8s, 
-        line-fill 0.3s ease forwards calc(var(--full-delay) + 1.8s);
-}
-
-@keyframes line-animation {
-    to{
-        stroke-dashoffset:0;
-    }
-}
-
-@keyframes line-fill {
-    from{
-        fill: transparent;
-    }
-    to{
-        fill: white;
-    }
-}
-
-@keyframes opacity-letter {
-    from{
-        opacity: 1;
-    }
-    to{
-        opacity: 0;
-        display: none;
-    }
-}
+.svgName path {
+    transition: fill 0.3s ease-in-out;
+  }
 
 @keyframes text-move-left {
-    to{
-        margin-left: -10%;
-    }
+    to{margin-left: -10%;}
 }
+
 @keyframes text-move-up {
     to{
         margin-top: -20%;
@@ -114,27 +32,22 @@
 }
 
 @media (max-width: 1200px) {
-    .svgName {
-        transform: scale(0.70);
-    }
+    .svgName {transform: scale(0.70);
+}
 }
 @media (max-width: 992px) {
-    .svgName {
-        transform: scale(0.60);
+    .svgName {transform: scale(0.60);
     }
 }
 @media (max-width: 768px) {
-    .svgName {
-        transform: scale(0.50);
+    .svgName {transform: scale(0.50);
     }
 }
 @media (max-width: 576px) {
-    .svgName {
-        transform: scale(0.40);
+    .svgName {transform: scale(0.40);
     }
 }
 @media (max-width: 480px) {
-    .svgName {
-        transform: scale(0.40);
+    .svgName {transform: scale(0.40);
     }
 }
