--- a/src/index.css
+++ b/src/index.css
@@ -3,6 +3,27 @@
 @tailwind utilities;
 
 @layer utilities {
+  .backface-visible {
+    backface-visibility: visible;
+    -webkit-backface-visibility: visible;
+    -moz-backface-visibility: visible;
+    -ms-backface-visibility: visible;
+  }
+  .backface-hidden {
+    backface-visibility: hidden;
+    -webkit-backface-visibility: hidden;
+    -moz-backface-visibility: hidden;
+    -ms-backface-visibility: hidden;
+  }
+  .y-45deg{
+    transform: rotateY(45deg);
+  }
+  .y-90deg{
+    transform: rotateY(90deg);
+  }
+  .y-180deg{
+    transform: rotateY(180deg);
+  }
   .text-color{
     color: var(--text-color);
   }
@@ -185,7 +206,7 @@ body{
   background-repeat: no-repeat;
   position: relative;
   overflow-x: hidden;
-  transition: background 0.3s ease-in-out;
+  transition: background 0.6s ease-in-out;
 }
 
 .poppins-regular {
